fixed overlap

--- a/css/style-v1.css
+++ b/css/style-v1.css
@@ -111,7 +111,7 @@
   background-color: var(--white);
   border-radius: 0px 8px 8px 0px;
   margin-top: -1px;
-  margin-bottom: -1px;
+  /* margin-bottom: -1px; */
 }
 
 .center * {
